<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="376dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="#ffffff"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="151dp"
                android:layout_height="113dp"
                android:layout_marginBottom="40dp"
                app:srcCompat="@drawable/logoshunio" />

            <TextView
                android:id="@+id/textCigefi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/title_cigefi"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textUcr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_ucr"
                android:textAlignment="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtLicence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="@string/about_desc"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtDev1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/dev1"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtDev2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dev2"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnCerrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:background="#759995"
                android:text="@string/title_close"
                android:textColor="#FFF"
                android:textSize="18sp" />
        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>